git rid of deprecated class.newInstance